tests/NormalTests/paczka1/fuzzy1/30849843.err
Error in line 2: Ww94 A510 31,3
Error in line 7: QlBZMSSet S834 46,8
Error in line 5: EudyO S834 53,7
Error in line 10: EudyO S578 19,5
Error in line 20: EudyO S834 13,7
Error in line 27: EudyO A18 86,9
Error in line 31: Ww94 S578 517,7
